[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "lenskit_hpf"
dist-name = "lenskit-hpf"
author = "Michael Ekstrand"
author-email = "michaelekstrand@boisestate.edu"
home-page = "https://hpf.lenskit.org"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]
requires-python = ">= 3.7"
description-file = "README.md"
license = "MIT"
requires = [
    "lenskit[doc] @ git+https://github.com/lenskit/lkpy.git#main",
    "hpfrec"
]

[tool.flit.metadata.urls]
Documentation = "https://lkpy.lenskit.org/en/stable/hpfrec"
GitHub = "https://github.com/lenskit/lenskit-hpf"

[tool.flit.metadata.requires-extra]
test = [
    "pytest >= 6",
    "pytest-doctestplus >= 0.9",
]
dev = [
    "flit >= 3",
    "packaging >= 20",
    "flake8 >= 3",
    "coverage >= 5",
    "pytest-cov >= 2.12",
]

[tool.flit.sdist]
exclude = [
    ".github",
    "*.ipynb",
    "doc",
    "data",
    "examples",
    "build-tools",
    "tests",
]

[tool.envtool.conda]
name = "lkpy"
channels = [
    "conda-forge"
]

[tool.envtool.conda.extras]
".none" = [
    "numba =0.53",
    "pandas =1.2",
    "csr >=0.4",
    "cython",
    "scipy",
]

[tool.envtool.conda.overrides]
hpfrec = { source = "pip" }
