[metadata]
name = lenskit-hpf
version = attr: lenskit_hpf.__version__
description = Hierarchical Poisson factorization for LnesKit
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
author = Michael Ekstrand
author_email = michaelekstrand@boisestate.edu
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Intended Audience :: Science/Research

# [project_urls]
# GitHub = https://github.com/lenskit/lenskit-hpf

[options]
zip_safe = False
packages = lenskit_hpf
python_requires = >=3.7
install_requires =
    lenskit @ git+https://github.com/lenskit/lkpy.git#main
    hpfrec

[options.extras_require]
dev =
    flake8 >=3
    coverage >=5
    pytest-cov >=2.12
test =
    pytest >=6
    pytest-doctestplus >=0.9
